# handcrafted_cone_detection

./: CMakeLists.txt  README.md  cam_viz.rviz
handcrafted_cone_detection/: CMakeLists.txt
handcrafted_cone_detection/src/: waypoint_extractor.py
helper_files/: bebop_400_arch_2.py  cnn_architecture.py  local_base_net.py
msg/: ConeImgLoc.msg
src/: bebop_waypoint_estimator_nn.py  camera_visualiser.py  extract_cone_loc.py  waypoint_estimator_nn.py  waypoint_extractor.py
